Added dynamic incomes and expenses calculation